...
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stocksRecycler"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="10dp"
...
        app:layout_constraintBottom_toTopOf="@+id/stocksRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/refresh_leaderboard"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="Refresh the Leaderboard..."
...
